--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ server.port=9000
 
 ## DataSource configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/db_lansrod
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/db_lansrod2
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.javax.persistence.validation.mode=none
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 
 ## Swagger Documentations
