--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,20 @@ server.port=9000
 
 ## DataSource configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/db_lansrod2
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/db_lansrod
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.javax.persistence.validation.mode=none
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 ## Swagger Documentations
 springfox.documentation.swagger.v2.path= /api/doc.json
+
+#Log level configuration
+logging.level.error=ERROR
+logging.level.com.openclassrooms=INFO
+logging.level.org.springframework.boot.autoconfigure.jdbc=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
