Container app with Docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 ## Server port
-server.port=9000
+server.port=8084
+
+spring.application.name=lansrod
 
 ## DataSource configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,6 +19,6 @@ springfox.documentation.swagger.v2.path= /api/doc.json
 
 #Log level configuration
 logging.level.error=ERROR
-logging.level.com.openclassrooms=INFO
+logging.level.com.lansrod=INFO
 logging.level.org.springframework.boot.autoconfigure.jdbc=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
