Implementation jwt security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,15 @@ spring.jpa.generate-ddl=true
 ## Swagger Documentations
 springfox.documentation.swagger.v2.path= /api/doc.json
 
-#Log level configuration
+## Log level configuration
 logging.level.error=ERROR
 logging.level.com.lansrod=INFO
 logging.level.org.springframework.boot.autoconfigure.jdbc=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+
+## Security configuration
+security=
+    jwt=
+        token=
+            secret-key= secret-key
+            expire-length= 300000
